--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ h1
 }
 
 
-.title
+.title img
 {
     object-fit: cover;
 }
@@ -17,7 +17,7 @@ h1
 .carousel-item img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: fill;
 }
 
 
@@ -168,26 +168,7 @@ h1,h2{
     object-fit:cover; 
     border-radius: 40px;
 }
-.spl
-{
-    width:409px
-}
-.spl1
-{
-    width:410px;
-    height:259px
-}
-.spl2
-{
-    width: 420px;
-    height:290px;
-}
-.spl3
-{
-    width: 420px;
-    height:280px;
 
-}
 
 .carousel-control-prev {
     color: #fff; 
@@ -224,11 +205,12 @@ h1,h2{
     transform: scale(1.1);
 }
 
-@media (max-width:576px) 
+@media (max-width:320px)
 {
     .title img
     {
         object-fit: fill;
+        height: 300px;
     }
 
     .carousel-item img {
@@ -239,28 +221,86 @@ h1,h2{
     
     
     .carousel-item {
-        height: 200px; 
+        height: 180px; 
         width: 100%; 
     }
+
+
+    .img-container {
+        position: relative;
+    }
+    .img1-container {
+        position: relative;
+    }
+    
+    .circle-overlay {
+        position: absolute;
+        top: 80px;
+        left: 190px;
+        height: 200px;
+        width: 200px;
+        background-color: white ; 
+        border-radius: 50%;
+        opacity: 0.7;
+        z-index: 2;
+    }
+    
+    .circle-overlay p
+    {
+        text-align: center;
+        font-size: 0.57rem;
+        position: absolute;
+        top: 40px;
+        left: 20px;
+        font-family: fantasy;
+    }
+
+    .int-img img
+    {
+        width: 300px;
+        height: 100%; 
+        object-fit:cover; 
+        border-radius: 40px;
+    }
+
     .int-title img
     {
         object-fit: fill;
+        height: 450px;
 
+    }
+
+    .overlap
+    {
+        position: absolute;
+        top:30px;
+        left:10px;
+        text-align: center;
+    }
+    .overlap p{
+        text-align: center;
+        font-weight: bold;
+        font-size: 30px;
+        color: black;
+        background-color: rgba(255,255,255,0.4);
+        border-radius: 20px;
+        font-family: serif;
     }
     .isl-title img
     {
         object-fit: fill;
+        height: 400px;
     }
     .isl-title h1
     {
         position: absolute;
         font-family: serif;
         font-size: small;
-        top: 650px; 
+        top: 300px; 
         left: 10px; 
         color: white; 
         text-align:start; 
-        font-size: 50px;
+        font-size: 40px;
     }
     .int-title
     {
@@ -270,7 +310,370 @@ h1,h2{
         position: absolute;
         font-family: serif;
         font-size: small;
-        top: 650px; 
+        top: 370px; 
+        left: 10px; 
+        color: white; 
+        text-align:start; 
+        font-size: 30px; 
+    }
+
+    .int-container
+    {
+        padding-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content:end;
+    }
+
+}
+@media (min-width:321px) and (max-width:375px)
+{
+    .title img
+    {
+        object-fit: fill;
+        height: 400px;
+    }
+
+    .carousel-item img {
+        width: 100%;
+        height: 500;
+        object-fit: fill;
+    }
+    
+    
+    .carousel-item {
+        height: 200px; 
+        width: 100%; 
+    }
+
+
+    .img-container {
+        position: relative;
+    }
+    .img1-container {
+        position: relative;
+    }
+    
+    .circle-overlay {
+        position: absolute;
+        top: 100px;
+        left: 210px;
+        height: 200px;
+        width: 200px;
+        background-color: white ; 
+        border-radius: 50%;
+        opacity: 0.7;
+        z-index: 2;
+    }
+    
+    .circle-overlay p
+    {
+        text-align: center;
+        font-size: 0.75rem;
+        position: absolute;
+        top: 40px;
+        left: 20px;
+        font-family: fantasy;
+    }
+
+    .int-img img
+    {
+        width: 350px;
+        height: 100%; 
+        object-fit:cover; 
+        border-radius: 40px;
+    }
+
+    .int-title img
+    {
+        object-fit: fill;
+        height: 450px;
+
+    }
+
+    .overlap
+    {
+        position: absolute;
+        top:30px;
+        left:10px;
+        text-align: center;
+    }
+    .overlap p{
+        text-align: center;
+        font-weight: bold;
+        font-size: 30px;
+        color: black;
+        background-color: rgba(255,255,255,0.4);
+        border-radius: 20px;
+        font-family: serif;
+    }
+    .isl-title img
+    {
+        object-fit: fill;
+        height: 400px;
+    }
+    .isl-title h1
+    {
+        position: absolute;
+        font-family: serif;
+        font-size: small;
+        top: 300px; 
+        left: 10px; 
+        color: white; 
+        text-align:start; 
+        font-size: 40px;
+    }
+    .int-title
+    {
+    position: relative;
+    }
+    .int-title h1 {
+        position: absolute;
+        font-family: serif;
+        font-size: small;
+        top: 370px; 
+        left: 10px; 
+        color: white; 
+        text-align:start; 
+        font-size: 30px; 
+    }
+
+    .int-container
+    {
+        padding-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content:end;
+    }
+
+}
+@media (min-width:376px) and (max-width:425px) 
+{
+    .title img
+    {
+        object-fit: fill;
+        height: 400px;
+    }
+
+    .carousel-item img {
+        width: 100%;
+        height: 500;
+        object-fit: fill;
+    }
+    
+    
+    .carousel-item {
+        height: 200px; 
+        width: 100%; 
+    }
+
+
+    .img-container {
+        position: relative;
+    }
+    .img1-container {
+        position: relative;
+    }
+    
+    .circle-overlay {
+        position: absolute;
+        top: 100px;
+        left: 250px;
+        height: 200px;
+        width: 200px;
+        background-color: white ; 
+        border-radius: 50%;
+        opacity: 0.7;
+        z-index: 2;
+    }
+    
+    .circle-overlay p
+    {
+        text-align: center;
+        font-size: 0.75rem;
+        position: absolute;
+        top: 40px;
+        left: 30px;
+        font-family: fantasy;
+    }
+
+    .int-img img
+    {
+        width: 400px;
+        height: 100%; 
+        object-fit:cover; 
+        border-radius: 40px;
+    }
+
+    .int-title img
+    {
+        object-fit: fill;
+        height: 450px;
+
+    }
+
+    .overlap
+    {
+        position: absolute;
+        top:30px;
+        left:10px;
+        text-align: center;
+    }
+    .overlap p{
+        text-align: center;
+        font-weight: bold;
+        font-size: 30px;
+        color: black;
+        background-color: rgba(255,255,255,0.4);
+        border-radius: 20px;
+        font-family: serif;
+    }
+    .isl-title img
+    {
+        object-fit: fill;
+        height: 400px;
+    }
+    .isl-title h1
+    {
+        position: absolute;
+        font-family: serif;
+        font-size: small;
+        top: 300px; 
+        left: 10px; 
+        color: white; 
+        text-align:start; 
+        font-size: 40px;
+    }
+    .int-title
+    {
+    position: relative;
+    }
+    .int-title h1 {
+        position: absolute;
+        font-family: serif;
+        font-size: small;
+        top: 370px; 
+        left: 10px; 
+        color: white; 
+        text-align:start; 
+        font-size: 30px; 
+    }
+
+    .int-container
+    {
+        padding-top: 20px;
+        display: flex;
+        flex-direction: column;
+        justify-content:end;
+    }
+}
+
+@media (min-width:426px) and (max-width:768px)
+{
+    .title img
+    {
+        object-fit: fill;
+        height: 600px;
+    }
+
+    .carousel-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+    }
+    
+    
+    .carousel-item {
+        height: 435px; 
+        width: 100%; 
+    }
+
+
+    .img-container {
+        position: relative;
+    }
+    .img1-container {
+        position: relative;
+    }
+    
+    .circle-overlay {
+        position: absolute;
+        top: 300px;
+        left: 500px;
+        height: 250px;
+        width: 250px;
+        background-color: white ; 
+        border-radius: 50%;
+        opacity: 0.7;
+        z-index: 2;
+    }
+    
+    .circle-overlay p
+    {
+        text-align: center;
+        font-size: 1rem;
+        position: absolute;
+        top: 40px;
+        left: 30px;
+        font-family: fantasy;
+    }
+
+    .int-img img
+    {
+        width: 700px;
+        height: 100%; 
+        object-fit:cover; 
+        border-radius: 40px;
+    }
+
+    .int-title img
+    {
+        object-fit: fill;
+        height: 550px;
+
+    }
+
+    .overlap
+    {
+        position: absolute;
+        top:200px;
+        left:10px;
+        text-align: center;
+    }
+    .overlap p{
+        text-align: center;
+        font-weight: bold;
+        font-size: 40px;
+        color: black;
+        background-color: rgba(255,255,255,0.4);
+        border-radius: 20px;
+        font-family: serif;
+    }
+    .isl-title img
+    {
+        object-fit: fill;
+        height: 400px;
+    }
+    .isl-title h1
+    {
+        position: absolute;
+        font-family: serif;
+        font-size: small;
+        top: 300px; 
+        left: 10px; 
+        color: white; 
+        text-align:start; 
+        font-size: 40px;
+    }
+    .int-title
+    {
+    position: relative;
+    }
+    .int-title h1 {
+        position: absolute;
+        font-family: serif;
+        font-size: small;
+        top: 450px; 
         left: 10px; 
         color: white; 
         text-align:start; 
@@ -282,5 +685,144 @@ h1,h2{
         padding-top: 20px;
         display: flex;
         flex-direction: column;
+        justify-content:end;
+    }
+    .col
+    {
+        height: 400px;
+        
+    }
+}
+
+@media (min-width:769px) and (max-width:1024px)
+{
+    .title img
+    {
+        object-fit: fill;
+        height: 600px;
+    }
+
+    .carousel-item img {
+        width: 100%;
+        height: 100%;
+        object-fit: fill;
+    }
+    
+    
+    .carousel-item {
+        height: 435px; 
+        width: 100%; 
+    }
+
+
+    .img-container {
+        position: relative;
+    }
+    .img1-container {
+        position: relative;
+    }
+    
+    .circle-overlay {
+        position: absolute;
+        top: 300px;
+        left: 750px;
+        height: 250px;
+        width: 250px;
+        background-color: white ; 
+        border-radius: 50%;
+        opacity: 0.7;
+        z-index: 2;
+    }
+    
+    .circle-overlay p
+    {
+        text-align: center;
+        font-size: 1rem;
+        position: absolute;
+        top: 40px;
+        left: 30px;
+        font-family: fantasy;
+    }
+
+    .int-img img
+    {
+        width: 300px;
+        height: 200px; 
+        object-fit:cover; 
+        border-radius: 40px;
+    }
+
+    .int-title img
+    {
+        object-fit: fill;
+        height: 550px;
+
+    }
+
+    .overlap
+    {
+        position: absolute;
+        top:100px;
+        left:10px;
+        text-align: center;
+    }
+    .overlap p{
+        text-align: center;
+        font-weight: bold;
+        font-size: 30px;
+        color: black;
+        background-color: rgba(255,255,255,0.4);
+        border-radius: 20px;
+        font-family: serif;
+    }
+    .isl-title img
+    {
+        object-fit: fill;
+        height: 400px;
+    }
+    .isl-title h1
+    {
+        position: absolute;
+        font-family: serif;
+        font-size: small;
+        top: 300px; 
+        left: 10px; 
+        color: white; 
+        text-align:start; 
+        font-size: 40px;
+    }
+    .int-title
+    {
+    position: relative;
+    }
+    .int-title h1 {
+        position: absolute;
+        font-family: serif;
+        font-size: small;
+        top: 450px; 
+        left: 10px; 
+        color: white; 
+        text-align:start; 
+        font-size: 50px; 
+    }
+
+    .int-container
+    {
+        padding-top: 20px;
+        display: grid;
+        gap:10px;
+    }
+    .col
+    {
+        height: 300px;
+        width:300px;
+    }
+    .col h3
+    {
+        font-weight:bold;
+        font-family: cursive;
+        color: black;
+        text-align:end;
+        font-size: 30px;
     }
 }
